# Cube-LUT-Loader

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CubeLUT.cpp  CubeLUT.h  LICENSE  PERFORMANCE.md  README.md  applyNearestValue.cpp  applyNearestValue.hpp  applyTrilinear.cpp  applyTrilinear.hpp  conanfile.py  conanfile.txt  initHandler.cpp  initHandler.hpp  main.cpp
.github/: build-and-test.yml
.github/workflows/: build-and-test.yml
1Dprocess/: apply1D.cpp  apply1D.hpp
3Dprocess/: applyNearestValue.cpp  applyNearestValue.hpp  applyTrilinear.cpp  applyTrilinear.hpp
GPUImageProcess/: GPUprocessor.cpp  GPUprocessor.hpp
GPUImageProcess/LUT3D/: applyNearestValueGpu.cu  applyNearestValueHost.cpp  applyNearestValueHost.hpp  applyTrilinearGpu.cu  applyTrilinearGpu.cuh  applyTrilinearHost.cpp  applyTrilinearHost.hpp
GPUImageProcess/MultidimData/: MultidimDataUtils.cpp  MultidimDataUtils.hpp
ImageProcess/: Processor.cpp  Processor.hpp
ImageProcess/LUT1D/: apply1D.cpp  apply1D.hpp
ImageProcess/LUT3D/: applyNearestValue.cpp  applyNearestValue.hpp  applyTrilinear.cpp  applyTrilinear.hpp
InitHandler/: initHandler.cpp  initHandler.hpp
Loader/: CubeLUT.cpp  CubeLUT.hpp  Loader.cpp  Loader.hpp
docs/performance/: performance_plots.ipynb
docs/performance/data/: nearest_val.csv  trilinear.csv
include/DataLoader/: CubeLUT.hpp  DataLoader.hpp  dataLoader.hpp
include/FileIO/: CubeLUT.hpp  FileIO.hpp
include/GPUImageProcess/: GPUprocessor.hpp
include/GPUImageProcess/LUT3D/: applyNearestValueGpu.cuh  applyNearestValueHost.hpp  applyTrilinearGpu.cuh  applyTrilinearHost.hpp
include/GPUImageProcess/MultidimData/: MultidimDataUtils.hpp
include/GPUImageProcess/Utils/: CudaUtils.hpp
include/ImageProcess/: Processor.hpp
include/ImageProcess/LUT1D/: apply1D.hpp
include/ImageProcess/LUT3D/: applyNearestValue.hpp  applyTrilinear.hpp
include/ImageProcessing/: ImageProcessExecutor.hpp  ImageProcessor.hpp  LUTProcessor.hpp
include/ImageProcessing/CPU/: CPUModeExecutor.hpp  LUT3DPipelineCPU.hpp  NearestValImplCPU.hpp  Simple1DImplCPU.hpp  TetrahedralImplCPU.hpp  TrilinearImplCPU.hpp  WorkerData.hpp
include/ImageProcessing/CPUImageProcess/: CPUProcessor.hpp  WorkerData.hpp
include/ImageProcessing/CPUImageProcess/LUT1D/: apply1D.hpp
include/ImageProcessing/CPUImageProcess/LUT3D/: applyNearestValue.hpp  applyTrilinear.hpp
include/ImageProcessing/GPU/: GPUModeExecutor.hpp  LUT3DPipelineGPU.hpp  NearestValImplGPU.hpp  TrilinearImplGPU.hpp
include/ImageProcessing/GPU/Utils/: CudaCalls.hpp  CudaUtils.hpp
include/ImageProcessing/GPU/kernels/: nearestValue.cuh
include/ImageProcessing/GPUImageProcess/: GPUprocessor.hpp
include/ImageProcessing/GPUImageProcess/LUT3D/: applyNearestValueGpu.cuh  applyNearestValueHost.hpp  applyTrilinearHost.hpp
include/InitHandler/: initHandler.hpp
include/Loader/: CubeLUT.hpp  Loader.hpp
include/TaskDispatcher/: InputParams.h  TaskDispatcher.hpp
src/: CMakeLists.txt  main.cpp
src/DataLoader/: CMakeLists.txt  CubeLUT.cpp  DataLoader.cpp
src/FileIO/: CMakeLists.txt  CubeLUT.cpp  FileIO.cpp  ImageWrapper.cpp
src/GPUImageProcess/: CMakeLists.txt  GPUprocessor.cpp
src/GPUImageProcess/LUT3D/: CMakeLists.txt  applyNearestValueGpu.cu  applyNearestValueHost.cpp  applyTrilinearGpu.cu  applyTrilinearHost.cpp
src/GPUImageProcess/MultidimData/: CMakeLists.txt  MultidimDataUtils.cpp
src/GPUImageProcess/Utils/: CMakeLists.txt  CudaUtils.cpp  cudaUtils.cpp
src/ImageProcess/: CMakeLists.txt  Processor.cpp
src/ImageProcess/LUT1D/: CMakeLists.txt  apply1D.cpp
src/ImageProcess/LUT3D/: CMakeLists.txt  applyNearestValue.cpp  applyTrilinear.cpp
src/ImageProcessing/: CMakeLists.txt  ImageProcessExecutor.cpp  ImageProcessor.cpp
src/ImageProcessing/CPU/: CMakeLists.txt  CPUModeExecutor.cpp  LUT3DPipelineCPU.cpp  NearestValImplCPU.cpp  Simple1DImplCPU.cpp  TetrahedralImplCPU.cpp  TrilinearImplCPU.cpp
src/ImageProcessing/CPUImageProcess/: CMakeLists.txt  CPUProcessor.cpp
src/ImageProcessing/CPUImageProcess/LUT1D/: CMakeLists.txt  apply1D.cpp
src/ImageProcessing/CPUImageProcess/LUT3D/: CMakeLists.txt  applyNearestValue.cpp  applyTrilinear.cpp
src/ImageProcessing/GPU/: CMakeLists.txt  GPUModeExecutor.cpp  LUT3DPipelineGPU.cpp  NearestValImplGPU.cpp  TrilinearImplGPU.cpp
src/ImageProcessing/GPU/Utils/: CMakeLists.txt  CudaUtils.cpp
src/ImageProcessing/GPU/kernels/: CMakeLists.txt  nearestValue.cu  trilinear.cu
src/ImageProcessing/GPUImageProcess/: CMakeLists.txt  GPUprocessor.cpp
src/ImageProcessing/GPUImageProcess/LUT3D/: CMakeLists.txt  applyNearestValueGpu.cu  applyNearestValueHost.cpp  applyTrilinearGpu.cu  applyTrilinearHost.cpp
src/ImageProcessing/GPUImageProcess/Utils/: CMakeLists.txt  CudaUtils.cpp
src/InitHandler/: CMakeLists.txt  initHandler.cpp
src/Loader/: CMakeLists.txt  CubeLUT.cpp  Loader.cpp
src/TaskDispatcher/: CMakeLists.txt  InputParams.cpp  TaskDispatcher.cpp  taskDispatcher.cpp
src/test/: CMakeLists.txt  CPUProcessorMock.hpp  CubeLUTMock.hpp  CudaCallsMock.hpp  DataLoaderMock.hpp  DataLoaderTest.cpp  FileIOMock.hpp  FileIOTest.cpp  ImageProcessExecutorTest.cpp  ImageProcessorTest.cpp  InputArgsParserTest.cpp  InputParamsTest.cpp  InterpolationRegressionTest.cpp  LUTParserTest.cpp  LUTProcessorTest.cpp
src/test/color/: CMakeLists.txt  deltaE.cpp  deltaE.hpp
src/test/resources/: 17p_cmp.cube  alog.cube  xt3_flog_bt709.cube
